// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackButton should render correctly 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-hash ant-btn-text enhancer button windows desktop"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <svgr-url />
    </span>
    <span>
      Back
    </span>
  </button>
</div>
`;

exports[`BackButton should render correctly 2`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-hash ant-btn-text enhancer button"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <svgr-url />
    </span>
    <span>
      Back
    </span>
  </button>
</div>
`;
